@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Remove validStored, replace with storedValue
     Remove the default validStored class, almost never right
     Remove Eq/Ord/Data/Show from ShakeOptions (now contains a func)
     Add statistics gathering function
